# templar

./: Cargo.toml  README.md
src/: README.md  conf.rs  main.rs  option.rs  release.rs  usage.rs
tests/: templar.rs
